--- a/style/sections/about.css
+++ b/style/sections/about.css
@@ -9,7 +9,7 @@
   border-top: 0px;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 98%, 50% 100%, 0 98%);
   clip-path: polygon(0 0, 100% 0, 100% 98%, 50% 100%, 0 98%);
-  padding-bottom: 10%;
+  padding-bottom: 8rem;
 }
 
 .about-wrapper .about-wrapper-btn {
