adding link to animate.css in head

--- a/style/typography.css
+++ b/style/typography.css
@@ -28,6 +28,9 @@ a:hover {
   font-size: var(--big-font-size);
   font-weight: bold;
   text-transform: uppercase;
+
+  animation: bounce; /* referring directly to the animation's @keyframe declaration */
+  animation-duration: 2s; /* don't forget to set a duration! */
 }
 
 .dark-blue-text {
