--- a/style/main.css
+++ b/style/main.css
@@ -1,5 +1,4 @@
 /* Import your Components */
-@import url("./queries.css");
 @import url("./variables.css");
 @import url("./buttons.css");
 @import url("typography.css");
@@ -8,7 +7,7 @@
 @import url("sections/projects.css");
 @import url("sections/contact.css");
 @import url("sections/footer.css");
-
+@import url("./queries.css");
 
 /* GLOBAL STYLES */
 * {
@@ -19,6 +18,7 @@
 
 html {
   font-size: 62.5%;
+  /* scroll-behavior: smooth; */
 }
 
 body {
