--- a/style/queries.css
+++ b/style/queries.css
@@ -109,7 +109,13 @@
 /* Extra small devices (portrait phones, less than 576px) */
 @media (max-width: 575.98px) {
   /* Typography */
-
+  .section-title {
+    font-size: 2.8rem !important;
+  }
+  #about .about-wrapper__info-text {
+    text-align: center !important;
+    align-items: center;
+  }
   /* Buttons.css */
 
   /* Footer.css */
@@ -128,6 +134,9 @@
   /* About.css */
 
   /* Projects.css */
+  #projects .project-wrapper__text {
+    padding: 0 1rem;
+  }
 
   /* Contact.css */
   #about .container {
