--- a/style/sections/contact.css
+++ b/style/sections/contact.css
@@ -6,10 +6,11 @@
 	var(--primary-color) 20%,
 	var(--secondary-color) 80%
 	);
+	clip-path: polygon(0 0, 50% 2%, 100% 0, 100% 100%, 0 100%);
 	/* -webkit-clip-path: polygon(0 0, 50% 2%, 100% 0, 100% 100%, 0 100%);
 	clip-path: polygon(0 0, 50% 2%, 100% 0, 100% 100%, 0 100%); */
-	padding: 10rem 0;
-	margin-top: -10rem;
+	padding: 8rem 0;
+	/* margin-top: -10rem; */
 	margin-bottom: -1px;
 	color: var(--white-color);
 }
@@ -30,5 +31,11 @@
 }
 #contact .contact-wrapper__text, #contact .contact-wrapper a {
 	font-size: 2.4rem;
+}
+
+#banner {
+	margin-bottom: -1px;
+	-webkit-clip-path: none;
+	clip-path: none;
 }
  
