--- a/style/sections/footer.css
+++ b/style/sections/footer.css
@@ -21,6 +21,7 @@
 	 box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
 }
  .footer hr {
+	 margin: 0 auto;
 	 margin-top: 1rem;
 	 margin-bottom: 1rem;
 	 border: 0;
