--- a/style/main.css
+++ b/style/main.css
@@ -40,3 +40,20 @@ section {
   width: 100%;
   height: 100vh;
 }
+
+#hero .lang-nav {
+  position: relative;
+  text-align: left;
+  list-style: none;
+}
+
+#hero .lang-nav li {
+  display: inline-block;
+}
+#hero .lang-nav li a {
+  padding: 6px 10px;
+}
+
+#hero .lang-nav li a img{
+  width: 25px;
+}
