--- a/style/sections/contact.css
+++ b/style/sections/contact.css
@@ -1,16 +1,13 @@
 #contact {
-	/* background-image: linear-gradient(135deg, var(--primary-color 20%), var(--secondary-color 80%)); */
+	-webkit-clip-path: polygon(0 0, 50% 1%, 100% 0, 100% 100%, 0 100%);
+	clip-path: polygon(0 0, 50% 1%, 100% 0, 100% 100%, 0 100%);
 	background-color: var(--primary-color);
 	background-image: linear-gradient(
 	135deg,
 	var(--primary-color) 20%,
 	var(--secondary-color) 80%
 	);
-	clip-path: polygon(0 0, 50% 2%, 100% 0, 100% 100%, 0 100%);
-	/* -webkit-clip-path: polygon(0 0, 50% 2%, 100% 0, 100% 100%, 0 100%);
-	clip-path: polygon(0 0, 50% 2%, 100% 0, 100% 100%, 0 100%); */
 	padding: 8rem 0;
-	/* margin-top: -10rem; */
 	margin-bottom: -1px;
 	color: var(--white-color);
 }
