--- a/style/buttons.css
+++ b/style/buttons.css
@@ -92,6 +92,7 @@
 .cta-btn--resume {
   color: var(--white-color);
   border: 2px solid var(--white-color);
+  font-size: 1.9rem;
 }
 
 .cta-btn--resume::after {
@@ -105,6 +106,11 @@
 
 .cta-btn--resume:hover::after {
   width: 100%;
+}
+
+/* You Tube Icon */
+.cta-btn--resume i {
+  font-size: 15px;
 }
 
 /* Arrow Button */
