--- a/style/sections/banner.css
+++ b/style/sections/banner.css
@@ -1,4 +1,4 @@
 #banner {
   background-color: var(--primary-color);
-  background-image: linear-gradient( 135deg, var(--primary-color) 20%, var(--secondary-color) 100% );
+  /* background-image: linear-gradient( 15deg, var(--primary-color) 20%, var(--secondary-color) 80% ); */
 }
