created banners for about and contact section

--- a/style/main.css
+++ b/style/main.css
@@ -5,7 +5,7 @@
 @import url("./sections/hero.css");
 @import url("sections/about.css");
 @import url("sections/projects.css");
-@import url("sections/banner.css");
+@import url("sections/banners.css");
 @import url("sections/contact.css");
 @import url("sections/footer.css");
 @import url("./queries.css");
