--- a/style/sections/about.css
+++ b/style/sections/about.css
@@ -7,9 +7,8 @@
   color: var(--white-color);
   height: 100%;
   border-top: 0px;
-  -webkit-clip-path: polygon(0 0, 100% 0, 100% 98%, 50% 100%, 0 98%);
-  clip-path: polygon(0 0, 100% 0, 100% 98%, 50% 100%, 0 98%);
   padding-bottom: 8rem;
+  margin-bottom: 1px;
 }
 
 .about-wrapper .about-wrapper-btn {
