--- a/style/queries.css
+++ b/style/queries.css
@@ -165,6 +165,12 @@
   }
   /* About.css */
 
+  /* Banners */
+  #contact-banner {
+    background-image: linear-gradient(5deg, var(--primary-color) 0%, var(--secondary-color) 100% );
+    }
+  }
+
   /* Projects.css */
   #projects .project-wrapper__text {
     padding: 0 1rem;
