--- a/style/sections/banners.css
+++ b/style/sections/banners.css
@@ -13,3 +13,9 @@
   margin-bottom: -1px;
   background-image: linear-gradient( 55deg, var(--primary-color) 20%, var(--secondary-color) 100% );
 }
+
+.carousel-inner {
+  width: 65%;
+  margin: 0 auto;
+  color: #ddd;
+}
