--- a/style/typography.css
+++ b/style/typography.css
@@ -12,6 +12,7 @@ p, a {
 #about .about-wrapper__info-text, #about .about-wrapper__info-text a {
   font-size: 1.55rem;
   text-align: left;
+  color: #ddd;
 }
 
 a, a:link, a:hover, a:visited, a:active {
