--- a/style/sections/banners.css
+++ b/style/sections/banners.css
@@ -15,7 +15,14 @@
 }
 
 .carousel-inner {
-  width: 65%;
+  width: 80%;
   margin: 0 auto;
   color: #ddd;
+}
+
+.carousel-item p {
+  font-family: 'IBM Plex Sans', sans-serif;
+  font-weight: 400;
+  font-size: 2.8rem;
+  font-weight: 600;
 }
