--- a/style/sections/footer.css
+++ b/style/sections/footer.css
@@ -1,6 +1,6 @@
 .footer {
-	 -webkit-clip-path: polygon(0 0, 50% 2%, 100% 0, 100% 100%, 0 100%);
-	 clip-path: polygon(0 0, 50% 2%, 100% 0, 100% 100%, 0 100%);
+	 -webkit-clip-path: polygon(0 0, 50% 1.5%, 100% 0, 100% 100%, 0 100%);
+	 clip-path: polygon(0 0, 50% 1.5%, 100% 0, 100% 100%, 0 100%);
 	 background-image: linear-gradient(160deg, var(--secondary-color) 100%, var(--primary-color) 100%);
 	 color: var(--white-color);
 	 padding: 2.4rem 0;
@@ -107,4 +107,8 @@
 .ro-flag img {
   width: 25px;
   margin-bottom: 2px;
+}
+
+.creators {
+	color: #ddd;
 }
