--- a/style/sections/contact.css
+++ b/style/sections/contact.css
@@ -8,8 +8,8 @@
 	var(--secondary-color) 80%
 	);
 	padding: 8rem 0;
-	margin-bottom: -1px;
 	color: var(--white-color);
+	/* margin-bottom: -1px; */
 }
 #contact .grid-for-contact {
 	display: grid;
