--- a/style/sections/footer.css
+++ b/style/sections/footer.css
@@ -101,12 +101,13 @@
 .ro-flag li a {
   padding: 5px 5px 5px 0 !important;
   text-decoration: none;
-  color: var(--white-color);
+	color: var(--white-color);
+	font-size: 1.3rem;
 }
 
 .ro-flag img {
-  width: 25px;
-  margin-bottom: 2px;
+	width: 20px;
+	margin-bottom: 2px;
 }
 
 .creators {
