empying the contact banner

--- a/style/queries.css
+++ b/style/queries.css
@@ -79,6 +79,15 @@
   /* Typography */
 
   /* Buttons.css */
+  /* Contact-Banner */
+
+  /* .iwork {
+    font-size: 2rem;
+  }
+
+  .simple-wrapper {
+    width: 100%;
+  } */
 
   /* Footer.css */
 
@@ -181,7 +190,7 @@
 
   /* About-Banner */
   .carousel-item p {
-    font-size: 1.6rem;
+    font-size: 1.8rem;
   }
 
   /* Projects.css */
