--- a/style/sections/banners.css
+++ b/style/sections/banners.css
@@ -12,6 +12,8 @@
 #contact-banner {
   /* margin-bottom: -1px; */
   background-image: linear-gradient( 55deg, var(--primary-color) 20%, var(--secondary-color) 100% );
+  color: var(--white-color);
+  margin-bottom: -1px;
 }
 
 .carousel-inner {
