--- a/style/queries.css
+++ b/style/queries.css
@@ -137,6 +137,18 @@
 
 /* Extra small devices (portrait phones, less than 576px) */
 @media (max-width: 575.98px) {
+
+  .separator {
+    display: none;
+  }
+
+  #hero {
+      background: linear-gradient(
+      rgba(0, 0, 0, 1), 
+      rgba(0, 0, 0, 1)),
+    url("");
+  }
+
   /* Typography */
   .section-title {
     font-size: 2.8rem !important;
