--- a/style/sections/banners.css
+++ b/style/sections/banners.css
@@ -22,7 +22,7 @@
   color: #ddd;
 }
 
-.carousel-item p {
+.carousel-item h4 {
   font-family: 'IBM Plex Sans', sans-serif;
   font-weight: 400;
   font-size: 2.8rem;
