making all images even smaller

--- a/style/sections/hero.css
+++ b/style/sections/hero.css
@@ -21,7 +21,7 @@
   background: linear-gradient(
       rgba(0, 0, 0, 0.8), 
       rgba(0, 0, 0, 0.8)),
-    url("./../../img/color_burst-min.jpg");
+    url("./../../img/color_burst-min\ 12.16.56.jpg");
   background-position: center;
   background-size: cover;
   background-attachment: fixed;
